# SEOGEO-Workbench

./: .gitignore  AGENTS.md  MD架构设计初版方案.md  README.md  unified-content-platform-demo.html  全域内容工作台开发总计划_v1.md  全域内容工作台开发总计划_v2.md  全域内容工作台验收矩阵_v2.md  全域内容资产与观测架构方案_v3.2.md  全域内容资产与观测架构方案_v3.3.md  刷新失败点.md  系统数据字段全景.md
workbench/: .env.example  README.md  pyproject.toml  run.py
workbench/frontend/: index.html  package-lock.json  package.json  vite.config.ts
workbench/launchd/: com.workbench.contentos.plist  com.workbench.wechat-scheduler.plist
workbench/schemas/: generic-object.schema.json  geo-tools.schema.json  production-job.schema.json  search-features.schema.json  string-array.schema.json
workbench/scripts/: audit_wechat_snapshot_date.py  backfill_wechat_article_metrics.py  build_wechat_agent_daily_brief.py  migrate_wechat_morning_brief_state.py  reconcile_xhs_shadow_facts.py  static_baseline_audit.py  wechat_scheduler.py
workbench/tests/: conftest.py  test_api.py  test_backup.py  test_bff_modes.py  test_contract_diff.py  test_domain_ids.py  test_geo.py  test_governance_api.py  test_ingestion.py  test_legacy_proxy.py  test_legacy_wiki.py  test_migrations.py  test_mp.py  test_publishing_runtime.py  test_schema.py  test_signals.py  test_validation.py  test_wechat.py  test_wechat_agent_enhancements.py  test_wechat_agent_projection.py  test_wechat_agent_projection_contract.py  test_wechat_article_compat.py  test_wechat_article_metrics.py  test_wechat_atomic_cutover.py  test_wechat_aux.py  test_wechat_bootstrap_cache.py  test_wechat_frontend_idempotency.py  (+24 more)
(+1932 files in other folders)
