[project]
name = "unified-content-workbench"
version = "0.1.0"
description = "七套内容系统的本机统一事实层与工作台"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109,<1",
  "jsonschema>=4.20,<5",
  "pydantic>=2.5,<3",
  "uvicorn>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.26,<1",
  "pytest>=8,<10",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
